fixed scaling issue with carouse being too big

--- a/src/app/amara/amara.component.scss
+++ b/src/app/amara/amara.component.scss
@@ -87,6 +87,7 @@
 @media not screen and (min-width: 768px) { 
 
     .carousel {
+        max-height: 896px;
         height: calc(95vw * 1.8);
 
         .nextItem { 
